--- a/_docs/text/proposal.tex
+++ b/_docs/text/proposal.tex
@@ -60,20 +60,78 @@ Aby sa predišlo zbytočnému udržiavaniu stavov miestností v ktorých sa nena
 \end{itemize}
 
 \subsection{Editor obrázkov}
-Grafický editor bude implementovaný formou MediaWiki rozšírenia, naprogramovaného primárne v jazyku JavaSrcipt, s použitím frameworku AngularJS. Na komunikáciu so synchronizačným serverom použijeme JavaScriptovú knižnicu Socket.IO, konkrétne jej klientskú verziu. 
+Grafický editor implementujeme formou MediaWiki rozšírenia, naprogramovaného primárne v jazyku JavaSrcipt, s použitím frameworku AngularJS (kap.: \ref{sec:angular}). Na komunikáciu so synchronizačným serverom použijeme JavaScriptovú knižnicu Socket.IO (kap.: \ref{sec:socketio}), konkrétne jej klientskú verziu. Na vykresľovanie a udržiavanie stavu grafickej plochy použijeme knižnicu Fabric (kap.: \ref{sec:fabric}). 
 
 \subsubsection{Funkčné požiadavky grafického editora}
 \begin{itemize}
-	\item \textbf{Výber nástroja} - grafický editor bude poskytovať viacero pracovných nástrojov na vytváranie rôznych typov grafických objektov. Tie bude možné zvoliť kliknutím na ikonu reprezentujúcu zvolený nástroj. 
+	\item \textbf{Otvorenie grafického editora} a v prípade upravovania existujúceho súboru jeho automatické načítanie.
+	
+	\item \textbf{Výber nástroja} - grafický editor poskytne viacero pracovných nástrojov, na vytváranie rôznych typov grafických objektov. Tie môžu byť zvolené kliknutím na tlačidlo reprezentujúce daný nástroj. 
+	
+	\item \textbf{Vytvorenie objektu} - po zvolení nástroja môžeme pridať do grafickej plochy nasledujúce objekty:
+	\begin{itemize}
+		\item \textbf{Obdĺžnik}, \textbf{elipsu}, \textbf{trojuholník}, \textbf{úsečku} a \textbf{textové pole} pomocou kliknutia na grafickú plochu a  ťahaním kurzora sa bude nastavovať ich veľkosť.
+		\item \textbf{Polygón}, ktorého vrcholy sa budú pridávať postupným klikaním na grafickú plochu.
+		\item \textbf{Obrázok} môže používateľ pridať zvolením nástroja na pridávanie obrázkov. Zobrazí sa ponuka na nahratie lokálneho súboru.
+		\item \textbf{Voľne kreslená cesta} vytvorená kliknutím a ťahaním kurzora, s možnosťou nastavenia šírky a typu cesty, farby a veľkosti rozmazania.
+	\end{itemize}
+	
+	\item \textbf{Výber aktívneho objektu / skupiny objektov} - používateľ vyberie aktívny objekt a následne sa zobrazí panel s možnosťou zmeny jeho vlastností.
+	
+	\item \textbf{Modifikácia vlastností aktívneho objektu} v závislosti od jeho typu. Základné vlastnosti ako výška, šírka, pozícia, uhol rotácie a skosenie možu byť nastavované pomocou transformácie obálky objektu. Tieto a ďalšie vlastnosti bude možné zmeniť aj pomocou zadávania hodnôt do zodpovedajúcich textových polí, prípadne tlačidlami a inými ovládacími prvkami.
+	
+	\item \textbf{Odstránenie objektu} z grafickej plochy. 
+	
+	\item \textbf{Zmena hĺbky} ovplyvňujúca prekrývanie jednotlivých objektov v grafickej ploche.
+	
+	\item \textbf{Lokálne uzamknutie} zamedzí používateľovi možnosť pohybu, rotácie, a zmeny veľkosti objektu.
+	
+	\item \textbf{Zmena viditeľnosti} - každý grafický objekt môže byť skrytý z grafickej plochy editora a následne znova zobrazený.
+	
+	\item \textbf{Kopírovanie, vystrihnutie, vloženie a duplikovanie} objektu.
+	
+	\item \textbf{Priblíženie grafickej plochy} - používateľ môže proporcionálne zväčšiť alebo zmenšiť grafickú plochu zmenou hodnoty skálovania(zoom).
+	
+	\item \textbf{Zmena vlastností grafickej plochy} - okrem skálovania môže používateľ nastaviť aj jej rozmery, od čoho sa odvíja veľkosť výsledného súboru a tým aj jeho kvalita a taktiež farbu pozadia. 
+	
+	\item \textbf{Zobrazenie zoznamu používateľov}
+	
+	\item \textbf{Režim celej obrazovky}, kedy sa skryjú ovládacie prvky systému MediaWiki a grafický editora sa zväčší na maximálnu dostupnú veľkosť okna internetového prehliadača používateľa.
+	
+	\item \textbf{Vycentrovanie grafickej plochy} na vertikálny a horizontálny stred okna grafického editora.
+	
+	\item \textbf{Chat} - používatelia si môžu vymieňať informácie formou krátkych textových správ. 
+	
+	\item \textbf{Uloženie revízie súboru} v systéme MediaWiki. 
+	
+	\item \textbf{Zatvorenie editora} a následné presmerovanie používateľa na stránku súboru.
 \end{itemize}
 
+\subsubsection{Integrácia do sytému MediaWiki}
+Ako sme si opísali v časti \ref{sec:mediaWiki_extensions}, pre systém MediaWiki existuje viacero typov rozšírení. Pre naše riešenie sme si zvolili rozšírenie typu \textit{special page extension}. Učinili sme tak z dôvodu, že ide o najlepšiu voľbu z hľadiska vytvárania vlastného používateľského rozhrania a jeho špecifickej funkcionality. 
+
+V systéme MediaWiki má každý multimediálny súbor svoju vlastnú podstránku. Aby sme používateľom umožnili otvoriť multimediálne súbory pomocou nášho editora, je potrebné integrovať tlačidlo na otvorenie súboru v editore. To umiestnime medzi tlačidlá hornej navigačnej lišty, kde sa nachádzajú odkazy na úpravu/vytvorenie stránky, zobrazenie histórie zmien, zmazanie, presunutie a zamknutie súboru.
+
+\subsubsection{Návrh ovládacích prvkov editora}
+Väčšina prostredí grafických editorov, či už sú to vektorové, rastrové alebo 3D modelovacie editory využívajú rozdelenie ovládacích prvkov na 4 hlavné komponenty. Zoznam nástrojov zobrazený pri ľavom okraji okna editora, hlavné menu pri vrchnom a nastavenia nástrojov pri pravom okraji okna, s grafickou plochou uprostred týchto ovládacích komponentov. V našom prípade sme sa rozhodli použiť podobné rozloženie, kvôli zavedeným zvykom používateľov a tým pádom vyššej intuitívnosti pri používaní.
+
+Rozloženie komponentov bude taktiež pozostávať zo 4. hlavných častí \refimg{obr:editorWireframeBase}:
+\begin{itemize}
+	\item \textbf{Panel nástrojov} s tlačidlami pre všetky nástroje a pre výber farby výplne a farby obtiahnutia objektu. V paneli sa bude taktiež nachádzať tlačidlo na zapnutie prichytávania objektov k mriežke grafickej plochy.
+
+	\item \textbf{Hlavný panel} obsahujúci tlačidlo na prepnutie zobrazenia do režimu celej obrazovky, tlačidlo na vycentrovanie grafickej plochy a rozbaľovací zoznam správ chatu. Okrem týchto tlačidiel tu nájdeme aj 3 rozbaľovacie (dropdown) tlačidlá \textit{Súbor}, \textit{Upraviť} a \textit{Objekt}. Rozbalením tlačidla \textit{Súbor} sa zobrazí ponuka na exportovanie grafickej plochy do viacerých formátov, uloženie revízie a zatvorenie editora. Po rozbalením tlačidla \textit{Upraviť} sa sprístupnia možnosti na kopírovanie, vystrihnutie, vloženie a duplikovanie objektu. Pod posledným tlačidlom \textit{Objekt}, sa zobrazia možnosti operácií s aktívnym objektom na zmenu hĺbky objektu v grafickej ploche.
+
+	\item \textbf{Panel nastavení} tvorený dvoma komponentmi. Komponent vrstiev zobrazujúci zoznam všetkých grafických objektov s možnosťou ich rýchleho uzamknutia, skrytia. Vrstvy môžu byť preusporiadané pomocou ťahania, čím sa bude meniť ich hĺbka v grafickej ploche editora. Druhý komponent obsahujúci nastavenia aktuálneho kontextu editora bude dynamicky zobrazovať položky na nastavenie vlastností aktívneho objektu, grafickej plochy alebo nastavenia voľného kreslenia.
+
+	\item \textbf{Grafická plocha}, v ktorej budú vykresľované jednotlivé grafické objekty.
+\end{itemize}
+
+Okrem týchto panelov je potrebné informovať používateľa o niektorých vykonávaných akciách formou vyskakovacích (\textit{popup}) správ s možnosťou potvrdenia alebo prípadného zrušenia operácie. 
 
 \begin{figure}[h]
 	\centerline{\includegraphics[width=1\textwidth]{images/diagrams/editor_wireframe_base}}
 	\caption[Rozloženie komponentov editora]{Návrh rozloženia komponentov používateľského prostredia editora}
-	\label{obr:editor_wireframe_base}
+	\label{obr:editorWireframeBase}
 \end{figure}
 \FloatBarrier
 
-\subsubsection{Integrácia do sytému MediaWiki}
-% TODO: popisat akym sposobom bude editor integrovany do mw, preco special page, atd.
