--- a/_docs/text/00main.tex
+++ b/_docs/text/00main.tex
@@ -25,6 +25,8 @@
 \usepackage{placeins}
 \usepackage[avantgarde]{quotchap}
 \usepackage{titlesec}
+\usepackage{array}
+\usepackage[table,xcdraw]{xcolor}
 
 \setstretch{1.5}
 %\renewcommand\baselinestretch{1.5} % riadkovanie jeden a pol
