before grammar check

--- a/_docs/text/00main.tex
+++ b/_docs/text/00main.tex
@@ -53,20 +53,16 @@
 \newcommand\enmfpracovisko{Department of Applied Informatics}
 
 
-\newcommand{\sub}[1]{$_{\text{#1}}$}
 %referencie
 \newcommand{\refimg}[1]{(Obrázok  \ref{#1})}
 \newcommand{\reftab}[1]{(Tabuľka  \ref{#1})}
 \newcommand{\reflst}[1]{(Zdrojový kód  \ref{#1})}
 
-\newcommand{\p}[1]{\paragraph{#1}\mbox{}\\}
+%\newcommand{\p}[1]{\paragraph{#1}\mbox{}\\}
 
 
 \newcommand{\imageHeight}{150px}
-%zrusenie indentu pre paragraph a nastavenie medzery nad novym riadkom
-\def\spaceafterpar{1em}
-\setlength{\parskip}{\spaceafterpar}
-\setlength\parindent{0pt}
+
 
 \ifx\pdfoutput\undefined\relax\else\pdfinfo{ /Title (\mftitle) /Author (\mfauthor) /Creator (PDFLaTeX) } \fi
 
