--- a/_docs/text/base.tex
+++ b/_docs/text/base.tex
@@ -3,3 +3,8 @@
 \listoffigures
 
 \listoftables
+
+%zrusenie indentu pre paragraph a nastavenie medzery nad novym riadkom
+\def\spaceafterpar{1em}
+\setlength{\parskip}{\spaceafterpar}
+\setlength\parindent{0pt}
